...
  const contentInset = { top: 20, bottom: 20 };

  return (
    <View style={{ height: "100%", flexDirection: "column", paddingHorizontal: 10, backgroundColor: "white", borderRadius: 10 }}>
      {live && (
        <TouchableOpacity
          testID="ResetIntervalButton"
          style={{ padding: 15, borderRadius: 10, backgroundColor: "#ebebeb", margin: 5 }}
          onPress={() => {
            setSeconds(0);
            setECGData([]);
          }}
        >
...
