...
        testID={"StartScanButton"}
        style={{ backgroundColor: "green", width: "100%", height: 50, borderRadius: 10, justifyContent: "center", alignItems: "center" }}
        onPress={() => {
          scan();
        }}
      >
        <Text style={{ color: "white" }}>Start Scan</Text>
      </TouchableOpacity>
      <View style={{ flex: 1, width: "100%" }}>
        <ScanDevicesScreen devices={devices} onClose={onClose} onDevicePress={onDevicePress} isConnecting={state.isConnecting} currentDevice={state.currentDevice} />
      </View>
    </View>
  );
...
