...
          }
          return (
            <DrawerContentScrollView {...props} contentContainerStyle={{ flex: 1, flexDirection: "column", justifyContent: "space-between", paddingTop: 50 }}>
              <View style={{ flex: 1, flexDirection: "column", justifyContent: "flex-start" }}>
                <DrawerItem labelStyle={[{}]} label="Health Hub" onPress={() => props.navigation.navigate("Home")} icon={() => <Feather name="monitor" size={30} color="black" />} />
                <DrawerItem labelStyle={[{}]} label="Settings" onPress={() => props.navigation.navigate("Settings")} icon={() => <FontAwesome name="gear" size={35} color="black" />} />
                <DrawerItem labelStyle={[{}]} label="Graph" onPress={() => props.navigation.navigate("Graph")} icon={() => <Entypo name="line-graph" size={35} color="black" />} />
                <DrawerItem
                  labelStyle={[{}]}
                  label="Logout"
                  onPress={() => {
                    props.navigation.closeDrawer();
                    props.navigation.navigate("Login");
...
